placeholder for all missing imgs updated searchstring in show_info.html template for tags fixed mistakingly assuming its not a assoc col were searching for when theres no delim in the search string since u can also search for a single value in an assoc col

--- a/manga_db/webGUI/templates/layout.html
+++ b/manga_db/webGUI/templates/layout.html
@@ -28,6 +28,15 @@
 	{% endwith %}
 {% block body %}{% endblock %}
 </div>
+<script>
+    function imgError(image) {
+        // remove onerror defaut
+        image.onerror = "";
+        // replace with placeholder
+        image.src = "{{ url_for('static', filename='no-image.png') }}";
+        return true;
+    };
+</script>
 
 <div class="jump-book-container">
     <form action="{{ url_for('jump_to_book_by_url') }}" method=post class="search-tags">
