fixed adding empty lists to col dicts in search syntax parser added searching for title if no col specified started adding pages

--- a/manga_db/webGUI/static/style.css
+++ b/manga_db/webGUI/static/style.css
@@ -168,11 +168,7 @@ li.warning {
         text-align: left;
     }
 }
-#sorting-box {
-    display: inline-table;
-    line-height: 32px;
-}
-#asc-desc {
+.search-options {
     display: inline-table;
     line-height: 32px;
 }
