--- a/manga_db/webGUI/templates/show_entries.html
+++ b/manga_db/webGUI/templates/show_entries.html
@@ -25,19 +25,17 @@
 	</div>
 	<div class="search-text col-md-6 col-sm-12">
 	<div class="button-container container-align-right" id="simple-container-sorting">
-		<div id="sorting-box">
+		<div class="search-options" id="sorting-box">
 		<label for="order-col-libox">Sorting:</label>
 		<select id="order-col-libox" name="order-by-col" style="color: #000;">
-		<option {{ 'selected="selected"' if order_col_libox == "id" else "" }} value="id">Date of Import</option>
-		  <option {{ 'selected="selected"' if order_col_libox == "title_eng" else "" }} value="title_eng">Title</option>
-		  <option {{ 'selected="selected"' if order_col_libox == "upload_date" else "" }} value="upload_date">Upload date</option>
+		<option {{ 'selected="selected"' if order_col_libox == "id" else "" }} value="id">Id</option>
+		  <option {{ 'selected="selected"' if order_col_libox == "title" else "" }} value="title">Title</option>
 		  <option {{ 'selected="selected"' if order_col_libox == "pages" else "" }} value="pages">Pages</option>
-		  <option {{ 'selected="selected"' if order_col_libox == "rating" else "" }} value="rating">Rating</option>
 		  <option {{ 'selected="selected"' if order_col_libox == "my_rating" else "" }} value="my_rating">My Rating</option>
 		  <option {{ 'selected="selected"' if order_col_libox == "last_change" else "" }} value="last_change">Date of last change</option>
 		</select>
 		</div>
-		<div id="asc-desc">
+		<div class="search-options" id="asc-desc">
 		<fieldset>
 		{# give radio same name so only onbe can be selected #}
 		    <input type="radio" id="asc" name="asc-desc" value="ASC" {{ "checked" if asc_desc == "ASC" else "" }}>
