retrieve_book_data doesnt take lists as arg anymore also use update_from_dict for changing vars for book that hasnt been added yet -> reset _changes adding limit offset to search (not done) started adding add_book to webgui working next prev page buttons for search/index

--- a/manga_db/webGUI/templates/book.html
+++ b/manga_db/webGUI/templates/book.html
@@ -7,7 +7,12 @@
 <div class="book-page-container">
 	<div class="row row-no-margin">
 	<div class="book-page-cover col-md-2 col-sm-12 col-no-padding">
+        {% if book.id is not none %}
 		<img alt="{{ book.title }}" class="book-page-image img-responsive" src={{ url_for('thumb_static', filename=book.id) }} onerror="imgError(this);">
+        {% else %}
+		<img alt="{{ book.title }}" class="book-page-image img-responsive" src={{ url_for('static',
+        filename='no-image.png') }} onerror="imgError(this);">
+        {% endif %}
 	</div>
 	<div class="col-md-8 col-sm-12 col-no-padding alt-bg book-info-wrap">
 		<div class="row row-no-margin">
