--- a/manga_db/webGUI/static/style.css
+++ b/manga_db/webGUI/static/style.css
@@ -15,6 +15,16 @@ h3              { color: #22a7f0; }
 .search-tags input {
 
 }
+#page-next {
+    position: fixed;
+    top: 50%;
+    right: 0;
+}
+#page-prev {
+    position: fixed;
+    top: 50%;
+    left: 0;
+}
 .button-leftmost {
     margin: 5px 5px 5px 0;
 }
