--- a/manga_db/webGUI/templates/show_entries.html
+++ b/manga_db/webGUI/templates/show_entries.html
@@ -27,7 +27,7 @@
 	<div class="button-container container-align-right" id="simple-container-sorting">
 		<div class="search-options" id="sorting-box">
 		<label for="order-col-libox">Sorting:</label>
-		<select id="order-col-libox" name="order-by-col" style="color: #000;">
+		<select id="order-col-libox" name="order_by_col" style="color: #000;">
 		<option {{ 'selected="selected"' if order_col_libox == "id" else "" }} value="id">Id</option>
 		  <option {{ 'selected="selected"' if order_col_libox == "title" else "" }} value="title">Title</option>
 		  <option {{ 'selected="selected"' if order_col_libox == "pages" else "" }} value="pages">Pages</option>
@@ -38,9 +38,9 @@
 		<div class="search-options" id="asc-desc">
 		<fieldset>
 		{# give radio same name so only onbe can be selected #}
-		    <input type="radio" id="asc" name="asc-desc" value="ASC" {{ "checked" if asc_desc == "ASC" else "" }}>
+		    <input type="radio" id="asc" name="asc_desc" value="ASC" {{ "checked" if asc_desc == "ASC" else "" }}>
 		    <label for="asc">ASC</label>
-		    <input type="radio" id="desc" name="asc-desc" value="DESC" {{ "checked" if asc_desc == "DESC" else "" }}>
+		    <input type="radio" id="desc" name="asc_desc" value="DESC" {{ "checked" if asc_desc == "DESC" else "" }}>
 		    <label for="desc">DESC</label>
 		</fieldset>
 		</div>
@@ -119,11 +119,11 @@
 
 {% if search_field %}
   <a href="{{ url_for('search_books', page=page+1, searchstring=search_field,
-      order_by_col=order_col_libox, asc_desc=asc_desc) }}"><div id="page-next"><i class="fa fa-arrow-right"></i></div></a>
+  order_by_col=order_col_libox, asc_desc=asc_desc) }}"><div id="page-next"><div id="page-next-inner">›</div></div></a>
   <a href="{{ url_for('search_books', page=page-1, searchstring=search_field,
-      order_by_col=order_col_libox, asc_desc=asc_desc) }}"><div id="page-prev"><i class="fa fa-arrow-left"></i></div></a>
+      order_by_col=order_col_libox, asc_desc=asc_desc) }}"><div id="page-prev"><div id="page-prev-inner">‹</div></a>
 {% else %}
-  <a href="{{ url_for('show_entries', page=page+1) }}"><div id="page-next"><i class="fa fa-arrow-right"></i></div></a>
-  <a href="{{ url_for('show_entries', page=page-1) }}"><div id="page-prev"><i class="fa fa-arrow-left"></i></div></a>
+<a href="{{ url_for('show_entries', page=page+1, order_by_col=order_col_libox, asc_desc=asc_desc) }}"><div id="page-next"><div id="page-next-inner">›</div></div></a>
+<a href="{{ url_for('show_entries', page=page-1, order_by_col=order_col_libox, asc_desc=asc_desc) }}"><div id="page-prev"><div id="page-prev-inner">‹</div></div></a>
 {% endif %}
 {% endblock %}
