--- a/manga_db/webGUI/templates/show_info.html
+++ b/manga_db/webGUI/templates/show_info.html
@@ -35,6 +35,18 @@
 {% endif %}
 {% endblock %}
 {% block book_info %}
+<div class="row row-no-margin">
+<div class="book-page-cover col-md-2 col-sm-12 col-no-padding">
+	<img alt="{{ book.title }}" class="book-page-image
+	img-responsive" src={{ url_for('thumb_static',
+	filename=book.id) }} onerror="imgError(this);">
+</div>
+<div class="col-md-8 col-sm-12 col-no-padding alt-bg book-info-wrap">
+<div class="row row-no-margin">
+	<div class="book-title">{{ book.title }}</div>
+	<hr>
+</div>
+<div class="book-info-container" style="border-spacing: 3px;">
 <div class="book-line">
 <div class="book-info">Title</div>
 <div class="book-data" id="Title">
@@ -350,8 +362,9 @@ BACK TO INDEX
 </a>
 </div>
 </div>
-{% endblock %}
-{% block ext_infos %}
+</div> {# book info container #}
+</div> {# book-info-wrap #}
+</div> {# row end #}
 <div style="margin: 1em 0;"></div>
 {% for ext_info in book.ext_infos %}
 {# loop.index is 1-based -> use loop.index0 for 0-based #}
@@ -436,8 +449,6 @@ BACK TO INDEX
 </div> {# row end #}
 {% endif %}
 {% endfor %}
-{% endblock %}
-{% block collections %}
 {% if collections %}
 <div style="margin: 1em 0;"></div>
 {% for coll_name, info_rows in collections %}
