fixed bug in MangaDBEntry._add_entry checked for both col and bool of _ext_infos on one line which meant that it could happen that it tried to _add_associated_col.. on ext_infos fixed huge bug -> one of the alterscripts prob left pragma foreign_keys on off so on delete cascade didnt work 	=> now always turning foreign_keys=ON every time we load the db add extinfo, add extinfo when jumping 	-> still hacky need to refactor add_book working and css ok limit with neg. nr works like normal query without limit in that it returns all rows and no performance hit (tested in Sqlitebrwoserportable)

--- a/manga_db/webGUI/templates/layout.html
+++ b/manga_db/webGUI/templates/layout.html
@@ -14,7 +14,11 @@
 <script src="{{ url_for('static', filename='lazyload.js') }}"></script>
 {# <script src="{{ url_for('static', filename='bootstrap.min.js') }}"></script> #}
 <div class=page>
-	<h1><a href="/" id="title-anchor">MangaDB</a></h1>
+	<h1><a href="/" id="title-anchor">MangaDB</a>
+    <a id="add-book-btn" class="book-read-button button-stack red-color" href="{{ url_for('show_add_book') }}">
+        <i class="fas fa-plus"></i>
+    </a>
+    </h1>
 	{% with messages = get_flashed_messages(with_categories=true) %}
 		{% if messages %}
 		    <div class="flash dark-color">
@@ -39,9 +43,6 @@
 </script>
 
 <div class="jump-book-container">
-    <a id="jump-book-btn" class="book-read-button button-stack red-color" href="{{ url_for('show_add_book') }}">
-        <i class="fas fa-share button-icon"></i>
-    </a>
     <form action="{{ url_for('jump_to_book_by_url') }}" method=post class="search-tags">
 	<div class="container-align-left" id="jump-url-field-container">
 	<input value="" type=text name="ext-url" class="data-search" id="jumpURL">
