--- a/manga_db/webGUI/templates/show_entries.html
+++ b/manga_db/webGUI/templates/show_entries.html
@@ -117,6 +117,7 @@
   {# only started working once placed at end of website or at least after imgs? #}
   <script type="text/javascript">lazyload();</script>
 
+{% if page %}
 {% if search_field %}
   <a href="{{ url_for('search_books', page=page+1, searchstring=search_field,
   order_by_col=order_col_libox, asc_desc=asc_desc) }}"><div id="page-next"><div id="page-next-inner">›</div></div></a>
@@ -125,5 +126,6 @@
 {% else %}
 <a href="{{ url_for('show_entries', page=page+1, order_by_col=order_col_libox, asc_desc=asc_desc) }}"><div id="page-next"><div id="page-next-inner">›</div></div></a>
 <a href="{{ url_for('show_entries', page=page-1, order_by_col=order_col_libox, asc_desc=asc_desc) }}"><div id="page-prev"><div id="page-prev-inner">‹</div></div></a>
+{% endif %}
 {% endif %}
 {% endblock %}
