--- a/manga_db/webGUI/static/style.css
+++ b/manga_db/webGUI/static/style.css
@@ -28,8 +28,8 @@ h3              { color: #22a7f0; }
 #page-next-inner {
 	position: relative;
 	top: 50%;
-    padding-left: 0.5em;
-    padding-right: 0.5em;
+    padding-left: 0.3em;
+    padding-right: 0.3em;
     font-size: 4em;
     font-weight: bold;
 }
@@ -46,8 +46,8 @@ h3              { color: #22a7f0; }
 #page-prev-inner {
 	position: relative;
 	top: 50%;
-    padding-left: 0.5em;
-    padding-right: 0.5em;
+    padding-left: 0.3em;
+    padding-right: 0.3em;
     font-size: 4em;
     font-weight: bold;
 }
@@ -246,6 +246,15 @@ li.warning {
 .button-icon {
     display: inline;
     margin: 0;
+}
+#add-ext-info-btn {
+    color: #1a1a1a; display: table-cell; /*margin-left: 10px;*/ margin-left: 5px;
+    margin-right: 0; margin-top: auto; margin-bottom: auto; padding: 6px; 
+}
+#add-book-btn {
+    float: right;
+    padding: 5px;
+    margin: 3px;
 }
 #jump-book-btn {
     background-color: #c00;
