in search_normal_mult_assoc GROUP BY only necessary when searching for intersection assoc col adding count to search func count not working for assoc col due to group by

--- a/manga_db/webGUI/templates/show_entries.html
+++ b/manga_db/webGUI/templates/show_entries.html
@@ -119,13 +119,21 @@
 
 {% if page %}
 {% if search_field %}
-  <a href="{{ url_for('search_books', page=page+1, searchstring=search_field,
-  order_by_col=order_col_libox, asc_desc=asc_desc) }}"><div id="page-next"><div id="page-next-inner">›</div></div></a>
-  <a href="{{ url_for('search_books', page=page-1, searchstring=search_field,
-      order_by_col=order_col_libox, asc_desc=asc_desc) }}"><div id="page-prev"><div id="page-prev-inner">‹</div></a>
+	{% if page != total %}
+	<a href="{{ url_for('search_books', page=page+1, searchstring=search_field,
+	order_by_col=order_col_libox, asc_desc=asc_desc) }}"><div id="page-next"><div id="page-next-inner">›</div></div></a>
+	{% endif %}
+	{% if page != 1 %}
+	<a href="{{ url_for('search_books', page=page-1, searchstring=search_field,
+	order_by_col=order_col_libox, asc_desc=asc_desc) }}"><div id="page-prev"><div id="page-prev-inner">‹</div></a>
+	{% endif %}
 {% else %}
-<a href="{{ url_for('show_entries', page=page+1, order_by_col=order_col_libox, asc_desc=asc_desc) }}"><div id="page-next"><div id="page-next-inner">›</div></div></a>
-<a href="{{ url_for('show_entries', page=page-1, order_by_col=order_col_libox, asc_desc=asc_desc) }}"><div id="page-prev"><div id="page-prev-inner">‹</div></div></a>
+	{% if page != total %}
+	<a href="{{ url_for('show_entries', page=page+1, order_by_col=order_col_libox, asc_desc=asc_desc) }}"><div id="page-next"><div id="page-next-inner">›</div></div></a>
+	{% endif %}
+	{% if page != 1 %}
+	<a href="{{ url_for('show_entries', page=page-1, order_by_col=order_col_libox, asc_desc=asc_desc) }}"><div id="page-prev"><div id="page-prev-inner">‹</div></div></a>
+	{% endif %}
 {% endif %}
 {% endif %}
 {% endblock %}
