--- a/manga_db/webGUI/templates/edit_info.html
+++ b/manga_db/webGUI/templates/edit_info.html
@@ -14,8 +14,9 @@
 <form id=upload-cover action="{{ url_for('upload_cover', book_id=book.id if book.id else 0) }}" method=post enctype=multipart/form-data style="margin-top:1em;">
       <input id=cover-file type=file name=file style="background-color:#333;" required />
       <input type=submit value="Upload Cover" style="margin:0.5em 0;background-color:#333;" />
-      <br/>Note: Otimal size is 400x~560px, height can vary but width should be 400px!
-      <br/>Apsect ratio: around 5:7
+      <br/>Note: Otimal width is 400px and optimal aspect ratio is 5:7
+      <br/>Image won't be cropped but if it differs too much from an aspect ratio of 5:7 it will
+      look distorted when displayed as thumbnail!
 </form>
 <script>
 $(document).ready(function() {
