writing last_change manually now when updating, removed triggers

--- a/manga_db/webGUI/templates/show_info.html
+++ b/manga_db/webGUI/templates/show_info.html
@@ -336,6 +336,12 @@
 </div>
 {% endif %}
 <div class="book-line">
+<div class="book-info">Last Change</div>
+<div class="book-data" id="LastChange">
+	{{ book.last_change }}
+</div>
+</div>
+<div class="book-line">
 <div class="book-info"></div>
 <div class="book-data" id="">
 {% if book.favorite %}
