added outdated col to ExternalInfo to mark links which have been modified/removed on ext page displaying outdated links when ext infos are added (also when importing book) fixed imgError sometimes not being defined

--- a/manga_db/webGUI/templates/book.html
+++ b/manga_db/webGUI/templates/book.html
@@ -2,7 +2,7 @@
 {% block body %}
 
 <div id="rootContainer" class="container-fluid">
-{% block book_changes %}{% endblock %}
+{% block additional_messages %}{% endblock %}
 {% if book %}
 <div class="book-page-container">
 {% block book_info %}
