--- a/manga_db/webGUI/templates/layout.html
+++ b/manga_db/webGUI/templates/layout.html
@@ -33,13 +33,9 @@
 {% block body %}{% endblock %}
 </div>
 <script>
-    function imgError(image) {
-        // remove onerror defaut
-        image.onerror = "";
-        // replace with placeholder
-        image.src = "{{ url_for('static', filename='no-image.png') }}";
-        return true;
-    };
+    $("img").on("error", function() {
+        $(this).attr("src", "{{ url_for('static', filename='no-image.png') }}");
+    });
 </script>
 
 <div class="jump-book-container">
