--- a/manga_db/webGUI/templates/show_entries.html
+++ b/manga_db/webGUI/templates/show_entries.html
@@ -1,5 +1,8 @@
 {% extends "layout.html" %}
 {% block body %}
+{% if add_anyway %}
+<div class="row" style="margin: -1em 0 1em auto;"><a class="book-read-button button-stack green-color" href="{{ add_anyway }}">Add Book anyway!</a></div>
+{% endif %}
 <div class="row search-all">
 <form action="{{ url_for('search_books') }}" method=post class="search-tags">
 	<div class="search-text col-md-6 col-sm-12">
