--- a/manga_db/webGUI/templates/show_entries.html
+++ b/manga_db/webGUI/templates/show_entries.html
@@ -58,6 +58,7 @@
 <div id="foundBooks">
 <div id="foundBooksWrapper">
 <div id="foundBooksInner">
+{% if books %}
     {% for book in books %}
     <div class="col-md-2 col-sm-4 col-xs-6 col-no-padding">
     <div class="book-grid-item-container">
@@ -108,10 +109,12 @@
     </div>
     </div>
     
-  {% else %}
-    <em>Unbelievable.  No entries here so far</em>
   {% endfor %}
-  </div>
+
+{% else %}
+<em>Unbelievable.  No entries here so far</em>
+{% endif %}
+</div> {# foundBooksInner #}
 </div>
 </div>
 </div>
