--- a/manga_db/webGUI/templates/show_info.html
+++ b/manga_db/webGUI/templates/show_info.html
@@ -542,7 +542,7 @@ BACK TO INDEX
 	{% for row in info_rows %}
 	<a href="{{ url_for('show_info', book_id=row.id) }}" class="trow {{ 'book-collection-is-me' if row.id == book.id else '' }}">
 	{# <span class="tcell">1</span> #}
-	<span class="tcell" width="100%">{{ row.title }}</span>
+	<span class="tcell" width="100%">{{ build_title(row.title_eng, row.title_foreign) }}</span>
 	{# cant use None in jinja have to use none (in-built function) #}
 	<span class="tcell">{{ row.my_rating if row.my_rating is not none else 'Not rated' }} <span><i class="fa fa-star" aria-hidden="true"></i></span></span>
 	<span class="tcell">{{ row.pages }}</span>
