--- a/manga_db/webGUI/templates/show_entries.html
+++ b/manga_db/webGUI/templates/show_entries.html
@@ -32,7 +32,10 @@
 		<label for="order-col-libox">Sorting:</label>
 		<select id="order-col-libox" name="order_by_col" style="color: #000;">
 		<option {{ 'selected="selected"' if order_col_libox == "id" else "" }} value="id">Id</option>
-		  <option {{ 'selected="selected"' if order_col_libox == "title" else "" }} value="title">Title</option>
+		  <option {{ 'selected="selected"' if order_col_libox == "title_eng" else "" }}
+          value="title_eng">English Title</option>
+		  <option {{ 'selected="selected"' if order_col_libox == "title_foreign" else "" }}
+          value="title_foreign">Foreign Title</option>
 		  <option {{ 'selected="selected"' if order_col_libox == "pages" else "" }} value="pages">Pages</option>
 		  <option {{ 'selected="selected"' if order_col_libox == "my_rating" else "" }} value="my_rating">My Rating</option>
 		  <option {{ 'selected="selected"' if order_col_libox == "last_change" else "" }} value="last_change">Date of last change</option>
